# python-project-52

./: .env  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint_check.yml  run_tests.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
staticfiles/: staticfiles.json
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  test_label.json  test_status.json  test_task.json  test_user.json  user.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_view.py
task_manager/statuses/: admin.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_post.py  test_view.py  testcase.py
task_manager/tasks/: models.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/tests/: test_models.py  test_post.py  test_view.py
task_manager/templates/: 404.html  footer.html  form.html  index.html  navbar.html
task_manager/templates/users/: users.html
task_manager/users/: forms.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_post.py  testcase.py
