[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Andrey <an_manaev1988@mail.ru>"]

[tool.poetry.dependencies]
python = "3.9.12"
Django = "^4.2.1"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
