[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Andrey <an_manaev1988@mail.ru>"]

[tool.poetry.dependencies]
python = "3.9.12"
Django = "^4.2.1"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^23.1"
whitenoise = "^6.4.0"
django-extensions = "^3.2.1"
rollbar = "^0.16.3"
psycopg2 = "^2.9.6"
django-filter = "22.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.6"
ipython = "^8.13.2"


[build-system]
requires = ["python >= 3.9.12", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
