[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Andrey <an_manaev1988@mail.ru>"]
readme = "README.md"
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^4.1.5"
python-dotenv = "^0.21.0"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.3"
whitenoise = "^6.3.0"
django-extensions = "^3.2.1"
django-filter = "^22.1"
rollbar = "^0.16.3"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
coverage = "^7.0.5"

[build-system]
requires = ["python >= 3.8.1", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"